# vaulty-dlp-scanner

./: .bandit  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  streamlit_app.py
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  keep_alive.yml
.streamlit/: config.toml
src/vaulty/: __init__.py  app_streamlit.py  detectors.py  extractors.py  reporting.py  scanner.py  utils.py  validators.py
src/vaulty/static/: style.css
tests/: test_detectors.py  test_extractors.py  test_reporting.py  test_scanner.py
